unpackaged/main/default/objects/Case_Assignment_Rule__mdt/fields/Assigned_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Id__c</fullName>
    <label>Assigned To Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>