unpackaged/main/default/objects/Case_Assignment_Rule__mdt/fields/Case_Team_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Team_Template_Id__c</fullName>
    <label>Case Team Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>