unpackaged/main/default/objects/Case_Assignment_Rule__mdt/fields/Exclude_Domain__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Domain__c</fullName>
    <label>Exclude Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>