unpackaged/main/default/objects/Case_Assignment_Rule__mdt/listViews/Invoices_Queues.listView-meta.xml
<ListView>
    <fullName>Invoices_Queues</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Queue__c</columns>
    <columns>Active__c</columns>
    <columns>Assigned_To_Id__c</columns>
    <columns>Assignment_Type__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Email_Domain__c</columns>
    <columns>Exclude_Domain__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Queue__c</field>
        <operation>startsWith</operation>
        <value>Invoice</value>
    </filters>
    <label>Invoices Queues</label>
</ListView>